# llmcord

./: .coveragerc  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  api_key_manager.py  bad_keys.py  bot.py  config-example.yaml  config.py  litellm_utils.py  llmcord.py  message_handler.py  models.py  pyproject.toml  pytest.ini  rate_limit_manager.py  requirements.txt  utils.py  views.py  web_search.py
src/llmcord/: __init__.py  __main__.py  bot.py  commands.py  config.py  entrypoint.py  events.py  globals.py  helpers.py  models.py  processing.py  runtime.py  server.py
src/llmcord/bad_keys/: __init__.py  db.py  rotation.py
src/llmcord/bot/: __init__.py  app.py  commands.py  events.py  server.py
src/llmcord/config/: __init__.py  app_constants.py  http.py  loader.py  model_utils.py  models.py
src/llmcord/core/: __init__.py  error_handling.py  exceptions.py  models.py
src/llmcord/core/config/: __init__.py  constants.py  http.py  manager.py  utils.py
src/llmcord/discord/: __init__.py  commands.py  error_handling.py  events.py  processing.py
src/llmcord/discord/ui/: __init__.py  constants.py  embed_limits.py  metadata.py  response_view.py  sources_view.py  utils.py
src/llmcord/litellm_utils/: __init__.py  builder.py  gemini.py  github_copilot.py  options.py
src/llmcord/logic/: __init__.py  assets.py  compaction.py  content.py  discord_ui.py  fallbacks.py  generation.py  generation_types.py  helpers.py  images.py  media_preprocessing.py  message.py  messages.py  permissions.py  pipeline.py  processor.py  providers.py  search_logic.py  utils.py
src/llmcord/message_handler/: __init__.py  attachment_utils.py  content_fetchers.py  message_builder.py  message_processing.py  response_generation.py  search_handlers.py  shared.py
src/llmcord/services/: __init__.py  circuit_breaker.py  database.py  extractors.py  facebook.py  http.py  humanizer.py  llm.py  search.py  tiktok.py  ytmp3.py
src/llmcord/services/database/: __init__.py  bad_keys.py  core.py  messages.py  users.py
src/llmcord/services/llm/: __init__.py  core.py  types.py
src/llmcord/services/llm/providers/: gemini.py  gemini_cli.py  gemini_errors.py  github.py  model_aliases.py  openai_codex.py  openrouter.py  openrouter_errors.py
src/llmcord/services/search/: __init__.py  config.py  core.py  decider.py  exa.py  tavily.py  utils.py
src/llmcord/ui/: metadata.py  response_view.py  sources_view.py  utils.py  views.py
src/llmcord/utils/: __init__.py  common.py
src/llmcord/views/: __init__.py  grounding.py  response_view.py
src/llmcord/web_search/: __init__.py  core.py  decider.py  exa.py  search_constants.py  tavily.py
tests/: __init__.py  _fakes.py  conftest.py  test_bad_keys.py  test_bot.py  test_centralized_error_handling.py  test_compaction.py  test_config.py  test_database.py  test_embed_limits.py  test_exa_error_handling.py  test_exception_logging_centralization.py  test_facebook_service.py  test_fallbacks.py  test_file_support.py  test_gemini_error_handling.py  test_gemini_media_tool_disabling.py  test_generation_thinking_history.py  test_google_gemini_cli_provider.py  test_googlelens.py  test_http_retry.py  test_humanizer_service.py  test_image_input_error_handling.py  test_infinite_cycle_guard.py  test_litellm_utils.py  test_llm.py  test_main_interrupt_handling.py  test_media_preprocessing.py  test_message_handler.py  test_models.py  test_openai_codex_provider.py  test_openrouter_error_handling.py  test_openrouter_provider.py  test_provider_api_key_normalization.py  test_response_view_thought_button.py  test_search_core.py  test_search_decider_and_parity.py  test_slash_commands.py  test_sqlite_surrogate_sanitization.py  test_startup_logging.py  (+9 more)
tests/logic/: test_processor.py  test_utils.py
tests/services/: test_database.py  test_llm.py  test_search.py  test_ytmp3.py
