[project]
name = "llmcord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpraw>=7.8.1",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "discord-py>=2.6.4",
    "httpx>=0.28.1",
    "libsql>=0.1.11",
    "litellm>=1.81.10",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pymupdf4llm>=0.2.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "twscrape>=0.17.0",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
