[project]
name = "llmcord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpraw>=7.8.1",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "discord-py>=2.6.4",
    "httpx>=0.28.1",
    "libsql>=0.1.11",
    "litellm>=1.81.10",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pymupdf4llm>=0.2.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "twscrape>=0.17.0",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # incompatible with D211
    "D213", # incompatible with D212
    "COM812", # may conflict with ruff format
]

[tool.ruff.lint.per-file-ignores]
"src/llmcord/services/llm/providers/gemini_cli.py" = [
    "A002",   # stdlib override requires parameter name `format`
    "ANN401", # stdlib override requires Any for variadic log_message args
    "C901",   # complex OAuth/streaming orchestration is intentional
    "PLR0912",# many branches in protocol parsing and onboarding logic
    "PLR0913",# stream helper needs explicit request fields
    "PLR0915",# provider flow has many statements by design
    "S105",   # OAuth/token endpoint constants are not credentials
    "TC003",  # keep runtime type imports explicit in this provider module
    "T201",   # login helper prints credentials for manual setup
    "TRY004", # runtime errors are used for user-facing flow failures
]
"src/llmcord/services/extractors.py" = [
    "C901", # extraction logic with fallback/retry is complex by design
]
"tests/**" = [
    "ANN",   # allow dynamic typing in tests
    "ARG",   # allow unused fixture args in helpers
    "D",     # no docstring requirements in tests
    "S101",  # allow asserts in tests
    "TC003", # don't require TYPE_CHECKING moves in tests
]
